feat(ionic): connect @muzika/core with ionic wallet app

--- a/projects/ionic-app/app/pages/home/home.page.html
+++ b/projects/ionic-app/app/pages/home/home.page.html
@@ -1,10 +1,16 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>Muzika</ion-title>
-  </ion-toolbar>
-</ion-header>
-
 <ion-content padding>
-  The world is your oyster.
-  <p>If you get lost, the <a target="_blank" href="https://ionicframework.com/docs">docs</a> will be your guide.</p>
+  <div class="splash-header">
+    <brand-icon-muzika></brand-icon-muzika>
+    <h1> Muzika </h1>
+    <p> Redemption of the music world </p>
+    <p>
+      <BR />
+      <ion-button>
+        Website
+      </ion-button>
+      <ion-button>
+        Github
+      </ion-button>
+    </p>
+  </div>
 </ion-content>
