--- a/projects/ionic-app/app/pages/about/about.page.html
+++ b/projects/ionic-app/app/pages/about/about.page.html
@@ -1,6 +1,8 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>About</ion-title>
+    <ion-title>
+      <brand-icon-muzika></brand-icon-muzika>
+    </ion-title>
   </ion-toolbar>
 </ion-header>
 
