--- a/projects/ionic-app/app/pages/tabs/tabs.page.html
+++ b/projects/ionic-app/app/pages/tabs/tabs.page.html
@@ -1,11 +1,8 @@
 <ion-tabs>
-  <ion-tab label="Home" icon="home" href="/tabs/(home:home)">
+  <ion-tab label="Home" icon="cube" href="/tabs/(home:home)">
     <ion-router-outlet name="home"></ion-router-outlet>
   </ion-tab>
-  <ion-tab label="Transaction" icon="information-circle" href="/tabs/(about:about)">
-    <ion-router-outlet name="about"></ion-router-outlet>
-  </ion-tab>
-  <ion-tab label="Contact" icon="contacts" href="/tabs/(contact:contact)">
-    <ion-router-outlet name="contact"></ion-router-outlet>
+  <ion-tab label="Muzika Wallet" icon="cash" href="/tabs/(wallet:wallet)">
+    <ion-router-outlet name="wallet"></ion-router-outlet>
   </ion-tab>
 </ion-tabs>
