--- a/projects/ionic-app/index.html
+++ b/projects/ionic-app/index.html
@@ -16,6 +16,8 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
 
+  <script>var process = {browser: true}, global = window;</script>
+
 </head>
 <body>
   <app-root></app-root>
