feat(muzika/core): publish 0.0.2

--- a/projects/ionic-app/app/pages/home/home.page.html
+++ b/projects/ionic-app/app/pages/home/home.page.html
@@ -4,13 +4,8 @@
     <h1> Muzika </h1>
     <p> Redemption of the music world </p>
     <p>
-      <BR />
-      <ion-button>
-        Website
-      </ion-button>
-      <ion-button>
-        Github
-      </ion-button>
+      Address {{address}} <BR /><BR />
+      {{balance | number:'1.0-6'}} MZK <BR />
     </p>
   </div>
 </ion-content>
