--- a/projects/ionic-app/app/pages/tabs/tabs.page.html
+++ b/projects/ionic-app/app/pages/tabs/tabs.page.html
@@ -2,7 +2,7 @@
   <ion-tab label="Home" icon="cube" href="/tabs/(home:home)">
     <ion-router-outlet name="home"></ion-router-outlet>
   </ion-tab>
-  <ion-tab label="Muzika Wallet" icon="cash" href="/tabs/(wallet:wallet)">
-    <ion-router-outlet name="wallet"></ion-router-outlet>
-  </ion-tab>
+  <!--<ion-tab label="Muzika Wallet" icon="cash" href="/tabs/(wallet:wallet)">-->
+    <!--<ion-router-outlet name="wallet"></ion-router-outlet>-->
+  <!--</ion-tab>-->
 </ion-tabs>
