--- a/projects/ionic-app/app/pages/about/about.page.html
+++ b/projects/ionic-app/app/pages/about/about.page.html
@@ -6,4 +6,15 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content></ion-content>
+<ion-content>
+  <div class="btn-group">
+    <a class="btn btn-primary">
+      <i class="fal fa-external-link-alt"></i> Export
+    </a>
+    <a class="btn btn-primary">
+      <i class="fal fa-download"></i> Import
+    </a>
+  </div>
+
+
+</ion-content>
