WIP: add post module

--- a/projects/viewer/src/index.html
+++ b/projects/viewer/src/index.html
@@ -11,5 +11,7 @@
 </head>
 <body>
   <app-root>Loading...</app-root>
+
+  <script type="text/javascript" src="node_modules/jquery/dist/jquery.min.js"></script>
 </body>
 </html>
