--- a/projects/viewer/src/index.html
+++ b/projects/viewer/src/index.html
@@ -8,10 +8,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <script>var process = {browser: true}, global = window;</script>
+  <script>window.$ = window.jQuery = require('jquery');</script>
 </head>
 <body>
   <app-root>Loading...</app-root>
-
-  <script type="text/javascript" src="node_modules/jquery/dist/jquery.min.js"></script>
 </body>
 </html>
