--- a/projects/viewer/src/index.html
+++ b/projects/viewer/src/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>AngularElectron</title>
+  <title>Muzika - Redemption of the music world</title>
   <base href="">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
