--- a/projects/web/src/index.html
+++ b/projects/web/src/index.html
@@ -7,6 +7,7 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700">
   <script src="assets/particles.js"></script>
   <script>var process = {browser: true}, global = window;</script>
 </head>
