fix(favicon): change favicon filename because it's invalid in Windows

--- a/projects/web/src/index.html
+++ b/projects/web/src/index.html
@@ -6,11 +6,11 @@
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="shortcut icon" type="image/x-icon" href="assets/images/favicon/16*16.ico" sizes="16x16">
-  <link rel="shortcut icon" type="image/x-icon" href="assets/images/favicon/32*32.ico" sizes="32x32">
-  <link rel="shortcut icon" type="image/x-icon" href="assets/images/favicon/48*48.ico" sizes="48x48">
-  <link rel="shortcut icon" type="image/x-icon" href="assets/images/favicon/64*64.ico" sizes="64x64">
-  <link rel="shortcut icon" type="image/x-icon" href="assets/images/favicon/128*128.ico" sizes="128x128">
+  <link rel="shortcut icon" type="image/x-icon" href="assets/images/favicon/16.ico" sizes="16x16">
+  <link rel="shortcut icon" type="image/x-icon" href="assets/images/favicon/32.ico" sizes="32x32">
+  <link rel="shortcut icon" type="image/x-icon" href="assets/images/favicon/48.ico" sizes="48x48">
+  <link rel="shortcut icon" type="image/x-icon" href="assets/images/favicon/64.ico" sizes="64x64">
+  <link rel="shortcut icon" type="image/x-icon" href="assets/images/favicon/128.ico" sizes="128x128">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700">
   <script src="assets/particles.js"></script>
   <script>var process = {browser: true}, global = window;</script>
