feat(intro-main): add teaser pdf file link & responsive optimize

--- a/projects/web/src/index.html
+++ b/projects/web/src/index.html
@@ -12,10 +12,11 @@
   <link rel="shortcut icon" type="image/x-icon" href="assets/images/favicon/64.ico" sizes="64x64">
   <link rel="shortcut icon" type="image/x-icon" href="assets/images/favicon/128.ico" sizes="128x128">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700">
-  <script src="assets/particles.js"></script>
   <script>var process = {browser: true}, global = window; </script>
 </head>
 <body>
-  <app-root>Loading...</app-root>
+  <app-root>
+    <div style="text-align: center; padding-top: 140px; width: 100vw; height: 100vh;">Redemption of the music world <BR /> <h2> Muzika </h2></div>
+  </app-root>
 </body>
 </html>
