feat(seo): optimize seo with meta tag

--- a/projects/web/src/index.html
+++ b/projects/web/src/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Muzika - Redemption of the music world</title>
+  <meta name="description" content="Muzika is a blockchain-based self-sustaining ecosystem that will revolutionize the digital music industry.">
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -12,6 +13,7 @@
   <link rel="shortcut icon" type="image/x-icon" href="assets/images/favicon/64.ico" sizes="64x64">
   <link rel="shortcut icon" type="image/x-icon" href="assets/images/favicon/128.ico" sizes="128x128">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700">
+  <meta name="google-site-verification" content="yGsZgJ8-bbIoRnt28qCI-yH1gp-pCFhGeTzzYHlt8ps" />
   <script>var process = {browser: true}, global = window; </script>
 </head>
 <body>
