feat(ga): support google analytics for intro website

--- a/projects/web/src/index.html
+++ b/projects/web/src/index.html
@@ -15,6 +15,15 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700">
   <meta name="google-site-verification" content="yGsZgJ8-bbIoRnt28qCI-yH1gp-pCFhGeTzzYHlt8ps" />
   <script>var process = {browser: true}, global = window; </script>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-122878864-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-122878864-1');
+  </script>
 </head>
 <body>
   <app-root>
