--- a/projects/web/src/index.html
+++ b/projects/web/src/index.html
@@ -6,7 +6,8 @@
   <meta name="description" content="Muzika is a blockchain-based self-sustaining ecosystem that will revolutionize the digital music industry.">
   <base href="/">
 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
+
   <link rel="shortcut icon" type="image/x-icon" href="assets/intro-img/favicon/16.ico" sizes="16x16">
   <link rel="shortcut icon" type="image/x-icon" href="assets/intro-img/favicon/32.ico" sizes="32x32">
   <link rel="shortcut icon" type="image/x-icon" href="assets/intro-img/favicon/48.ico" sizes="48x48">
