--- a/projects/studio-renderer/src/index.html
+++ b/projects/studio-renderer/src/index.html
@@ -6,9 +6,9 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <script type="text/javascript" src="angular-scripts.js"></script>
+  <!--<script type="text/javascript" src="angular-scripts.js"></script>-->
 </head>
 <body>
-  <app-root>Loading...</app-root>
+  <app-root>Muzika - Redepmtion of the music world</app-root>
 </body>
 </html>
