fix(intro): correct word

--- a/projects/intro/src/index.html
+++ b/projects/intro/src/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Muzika - Redemption of the music world</title>
+  <title>Muzika - Transforming the music world</title>
   <meta name="description" content="Muzika is a blockchain-based self-sustaining ecosystem that will revolutionize the digital music industry.">
   <base href="/">
 
@@ -27,7 +27,7 @@
 </head>
 <body>
   <app-root>
-    <div style="text-align: center; padding-top: 140px; width: 100vw; height: 100vh;">Redemption of the music world <BR /> <h2> Muzika </h2></div>
+    <div style="text-align: center; padding-top: 140px; width: 100vw; height: 100vh;">Transforming the music world <br> <h2> Muzika </h2></div>
   </app-root>
 </body>
 </html>
