feat: add naver-site-verification

--- a/projects/intro/src/index.html
+++ b/projects/intro/src/index.html
@@ -15,6 +15,7 @@
   <link rel="shortcut icon" type="image/x-icon" href="assets/intro-img/favicon/128.ico" sizes="128x128">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700">
   <meta name="google-site-verification" content="yGsZgJ8-bbIoRnt28qCI-yH1gp-pCFhGeTzzYHlt8ps" />
+  <meta name="naver-site-verification" content="b91ddc57e740c0467185c447fe0b4d83fac471b9"/>
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-122878864-1"></script>
   <script>
