refactor(index): set og:image favicon

--- a/projects/intro/src/index.html
+++ b/projects/intro/src/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <title>Muzika - Transforming the music world</title>
   <meta name="description" content="Muzika is a blockchain-based self-sustaining ecosystem that will revolutionize the digital music industry.">
+  <meta property="og:image" content="https://muzika.network/assets/favicon/512.png">
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
